[package]
name = "subsee"
version = "0.1.0"
authors = ["Andrew Jones <ascjones@gmail.com>"]
edition = "2018"

[dependencies]
# parse command line args
argh = "0.1.4"
# make the request to a substrate node to get the metadata
ureq = { version = "2.0.1", features = ["json"] }
# colourful error reports
color-eyre = "0.5.10"
# for serializing the metadata
serde = { version = "1.0.119", features = ["derive"] }
# for serializing as json
serde_json = "1.0.61"
# hex encoded metadata to bytes
hex = "0.4.2"
# actual metadata types
frame-metadata = { package = "frame-metadata", git = "https://github.com/paritytech/frame-metadata", branch = "aj-prefixed", features = ["v12", "v13", "std"] }
# for decoding bytes into the metadata types
scale = { package = "parity-scale-codec", version = "1.3.6", default-features = false }


