[package]
name = "subsee"
version = "0.1.0"
authors = ["Andrew Jones <ascjones@gmail.com>"]
edition = "2018"

[dependencies]
# parse command line args
argh = "0.1.6"
# make the request to a substrate node to get the metadata
ureq = { version = "2.2.0", features = ["json"] }
# colourful error reports
color-eyre = "0.5.11"
# for serializing the metadata
serde = { version = "1.0.130", features = ["derive"] }
# for serializing as json
serde_json = "1.0.68"
# hex encoded metadata to bytes
hex = "0.4.3"
# actual metadata types
frame-metadata = { version = "14.0.0", features = ["v12", "v13", "v14", "std"] }
# for decoding bytes into the metadata types
scale = { package = "parity-scale-codec", version = "2.3.0", default-features = false }
